added CCTapRecorder extension.

--- a/cocos/2d/libcocos2d.vcxproj
+++ b/cocos/2d/libcocos2d.vcxproj
@@ -354,6 +354,19 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClCompile Include="..\..\extensions\Particle3D\PU\CCPUVortexAffectorTranslator.cpp" />
     <ClCompile Include="..\..\extensions\physics-nodes\CCPhysicsDebugNode.cpp" />
     <ClCompile Include="..\..\extensions\physics-nodes\CCPhysicsSprite.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\CCCapture.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\CCEventListenerTapRecorder.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\CCPlayer.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\CCProtocol.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\CCRecord.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\CCRecordAdapter.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\CCRecorder.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\CCUrl.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\command\CCCommandCapture.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\command\CCCommandPlayer.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\command\CCCommandRecorder.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\command\CCCommandTapRecorder.cpp" />
+    <ClCompile Include="..\..\extensions\TapRecorder\command\CCCommandUrl.cpp" />
     <ClCompile Include="..\..\external\clipper\clipper.cpp" />
     <ClCompile Include="..\..\external\ConvertUTF\ConvertUTF.c" />
     <ClCompile Include="..\..\external\ConvertUTF\ConvertUTFWrapper.cpp" />
@@ -918,6 +931,20 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClInclude Include="..\..\extensions\Particle3D\PU\CCPUVortexAffectorTranslator.h" />
     <ClInclude Include="..\..\extensions\physics-nodes\CCPhysicsDebugNode.h" />
     <ClInclude Include="..\..\extensions\physics-nodes\CCPhysicsSprite.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\CCCapture.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\CCEventListenerTapRecorder.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\CCPlayer.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\CCProtocol.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\CCRecord.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\CCRecordAdapter.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\CCRecorder.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\CCUrl.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\CCUtilTapRecorder.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\command\CCCommandCapture.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\command\CCCommandPlayer.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\command\CCCommandRecorder.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\command\CCCommandTapRecorder.h" />
+    <ClInclude Include="..\..\extensions\TapRecorder\command\CCCommandUrl.h" />
     <ClInclude Include="..\..\external\clipper\clipper.hpp" />
     <ClInclude Include="..\..\external\ConvertUTF\ConvertUTF.h" />
     <ClInclude Include="..\..\external\edtaa3func\edtaa3func.h" />
